# Intent-Completeness-Checker

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_dummy.py
src/intentcheck/: cli.py  config.py
src/intentcheck/agents/: __init__.py  investigator.py  judge.py  searcher.py
src/intentcheck/core/: git_utils.py  models.py  orchestrator.py  report.py
src/intentcheck/tools/: agent_wrappers.py  grep_tool.py  read_file_tool.py
tests/: test_cli.py  test_config.py  test_git_utils.py  test_investigator.py  test_judge.py  test_orchestrator.py  test_report.py  test_searcher.py  test_tools.py
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/documentation/: page.tsx
