[project]
name = "intent-completeness-checker"
version = "0.1.0"
description = "Checks that an AI agent's intended code modifications were applied completely across the entire repository."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "groq",
    "typer",
    "rich",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
intentcheck = "intentcheck.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/intentcheck"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
